fix footer overflow

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,26 +1,25 @@
 footer {
-  background-color: var(--black);
-  color: white;
+	background-color: var(--black);
+	color: white;
 
-  display: flex;
-  justify-content: space-between;
-  z-index: 10;
-  position: absolute;
-  width: 100%;
-  overflow: hidden;
+	display: flex;
+	justify-content: space-between;
+	z-index: 10;
+	position: absolute;
+	width: 100%;
 }
 
 .footer-text {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  margin-left: 8px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	margin-left: 8px;
 }
 @media (max-width: 455px) {
-  .footer-text {
-    display: none;
-    z-index: 10;
-  }
+	.footer-text {
+		display: none;
+		z-index: 10;
+	}
 }
